--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
    <head>
-      <link rel="stylesheet" href="{{ '/assets/css/styles.css' }}">
+      <link rel="stylesheet" href="{{ 'assets/css/styles.css' }}">
    </head>
    <body>
       <div class="container">
