--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
          <nav>
             <ul>
                {% for item in site.data.navlist.navitems %}
-                  <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+                  <li class="nav-listItem"><a href="{{ item.url }}">{{ item.title }}</a></li>
                {% endfor %}
             </ul>
          </nav>
