--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+body {
+   font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 .container {
    display: grid;
 
@@ -38,8 +42,9 @@ footer {
 .header-title {
    color: white;
    background-color: #138a59;
-   padding: 10px;
+   padding: 25px;
    font-size: 2.2em;
+   font-weight: 700;
 }
 
 .footer-copyright {
@@ -52,6 +57,10 @@ nav, aside {
    background-color: #edf0f5;
 }
 
+.nav-listItem {
+   font-size: 1em;
+   font-weight: 700;
+}
 
 @media (max-width: 768px) {
    .container {
